fix: align buttons to the left

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -12,9 +12,3 @@
     color: clr(neutral, light);
   }
 }
-
-.btn__container {
-  @include mq-large {
-    text-align: center;
-  }
-}
