--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -137,10 +137,4 @@ h2 {
   color: hsl(0deg, 0%, 100%);
 }
 
-@media (min-width: 1000px) {
-  .btn__container {
-    text-align: center;
-  }
-}
-
 /*# sourceMappingURL=style.css.map */
